@@ -438,7 +438,9 @@ Transcripts:
 .br
 Numeric tower: rational and complex numbers.
 .br
-Numeric procedures:
+Numeric procedures and syntax:
+.BR #
+as digits of inexact numbers,
 .BR acos ,
 .BR angle ,
 .BR asin ,
