@@ -2350,6 +2350,9 @@
 (test (string #\x) "x")
 (test (string #\a #\b #\c) "abc")
 
+(test (string->number "") #f)
+(test (string->number "+") #f)
+(test (string->number "-") #f)
 (test (string->number "0") 0)
 (test (string->number "123") 123)
 (test (string->number "10100101" 2) 165)
@@ -2372,6 +2375,103 @@
 (test (string->number "1 ") #f)
 (test (string->number "+1 ") #f)
 (test (string->number "-1 ") #f)
+(test (string->number "0.0") 0.0)
+(test (string->number "-0.0") -0.0)
+(test (string->number "1.0") 1.0)
+(test (string->number "-1.0") -1.0)
+(test (string->number "12345.0") 12345.0)
+(test (string->number "-12345.0") -12345.0)
+(test (string->number "1.2345") 1.2345)
+(test (string->number "-1.2345") -1.2345)
+(test (string->number "0.12345") 0.12345)
+(test (string->number "-0.12345") -0.12345)
+(test (string->number "-0.00012345") -0.00012345)
+(test (string->number "0.1") 0.1)
+(test (string->number "0.01") 0.01)
+(test (string->number "0.001") 0.001)
+(test (string->number "0.0000000000001") 0.0000000000001)
+(test (string->number "1e0") 1.0)
+(test (string->number "1e-0") 1.0)
+(test (string->number "1e1") 10.0)
+(test (string->number "1e2") 100.0)
+(test (string->number "1e5") 100000.0)
+(test (string->number "1e10") 10000000000.0)
+(test (string->number "1e-1") 0.1)
+(test (string->number "1e-2") 0.01)
+(test (string->number "1e-5") 0.00001)
+(test (string->number "1e-10") 0.0000000001)
+(test (string->number "123.456e0") 123.456)
+(test (string->number "123.456e1") 1234.56)
+(test (string->number "123.456e2") 12345.6)
+(test (string->number "123.456e3") 123456.0)
+(test (string->number "123.456e4") 1234560.0)
+(test (string->number "123.456e5") 12345600.0)
+(test (string->number "123.456e10") 1234560000000.0)
+(test (string->number "-123.456e0") -123.456)
+(test (string->number "-123.456e1") -1234.56)
+(test (string->number "-123.456e2") -12345.6)
+(test (string->number "-123.456e3") -123456.0)
+(test (string->number "-123.456e4") -1234560.0)
+(test (string->number "-123.456e5") -12345600.0)
+(test (string->number "-123.456e10") -1234560000000.0)
+(test (string->number "123.456e-1") 12.3456)
+(test (string->number "123.456e-2") 1.23456)
+(test (string->number "123.456e-3") 0.123456)
+(test (string->number "123.456e-4") 0.0123456)
+(test (string->number "123.456e-5") 0.00123456)
+(test (string->number "123.456e-10") 0.0000000123456)
+(test (string->number "-123.456e-1") -12.3456)
+(test (string->number "-123.456e-2") -1.23456)
+(test (string->number "-123.456e-3") -0.123456)
+(test (string->number "-123.456e-4") -0.0123456)
+(test (string->number "-123.456e-5") -0.00123456)
+(test (string->number "-123.456e-10") -0.0000000123456)
+(test (string->number "+123.45e+678") 123.45e678)
+(test (string->number "-123.45e+678") -123.45e678)
+(test (string->number "+123.45e-678") 123.45e-678)
+(test (string->number "-123.45e-678") -123.45e-678)
+(test (string->number "1.") 1.0)
+(test (string->number ".1") 0.1)
+(test (string->number "1.e1") 10.0)
+(test (string->number ".1e1") 1.0)
+(test (string->number "1000e0") 1e3)
+(test (string->number "100e1") 1e3)
+(test (string->number "10e2") 1e3)
+(test (string->number "1e3") 1e3)
+(test (string->number ".1e4") 1e3)
+(test (string->number ".01e5") 1e3)
+(test (string->number ".001e6") 1e3)
+(test (string->number "12345678.901d10") 1.2345678901e+17)
+(test (string->number "12345678.901e10") 1.2345678901e+17)
+(test (string->number "12345678.901f10") 1.2345678901e+17)
+(test (string->number "12345678.901l10") 1.2345678901e+17)
+(test (string->number "12345678.901s10") 1.2345678901e+17)
+(test (string->number "12345678.901D10") 1.2345678901e+17)
+(test (string->number "12345678.901E10") 1.2345678901e+17)
+(test (string->number "12345678.901F10") 1.2345678901e+17)
+(test (string->number "12345678.901L10") 1.2345678901e+17)
+(test (string->number "12345678.901S10") 1.2345678901e+17)
+(test (string->number "1 ") #f)
+(test (string->number "1.1 ") #f)
+(test (string->number "1.1e1 ") #f)
+(test (string->number "1e") #f)
+(test (string->number "1e+") #f)
+(test (string->number "1e-") #f)
+(test (string->number "1.e") #f)
+(test (string->number "e1") #f)
+(test (string->number "+e1") #f)
+(test (string->number "-e1") #f)
+(test (string->number ".e1") #f)
+(test (string->number "+.e1") #f)
+(test (string->number "-.e1") #f)
+(test (string->number ".") #f)
+(test (string->number "#b100") 4)
+(test (string->number "#o100") 64)
+(test (string->number "#d100") 100)
+(test (string->number "#x100") 256)
+(test (string->number "#e100") 100.0)
+(test (string->number "#i100") 100.0)
+(test (inexact? (string->number "#i100")) #t)
 
 (test (string-append "" "") "")
 (test (string-append "abc" "") "abc")
