@@ -1,5 +1,11 @@
 Change Log
 
+2009-06-07
+	Made STRING->NUMBER recognize real numbers.
+	Fix: missing initialization of got_d in string_numeric().
+	Fix: FLOOR and EXACT->INEXACT did not normalize their results.
+	Simplified counter_to_string(), based on code by Masaru KIMURA.
+	Added loads of tests for STRING->NUMBER.
 2009-06-06
 	Extended domain of NUMBER->STRING to REAL.
 	Added support for the "precision markers" D,F,L,S, although
